additional row causing overlap on the right handside resolved by removing additional row

--- a/GamingWorldProject/css/style.css
+++ b/GamingWorldProject/css/style.css
@@ -114,10 +114,6 @@
   color: white;
 }
 
-.icon-select
-{
-    color: green
-}
 
 .navbar-light .navbar-brand {
   color: rgb(255, 255, 255);
